--- a/glove/pyproject.toml
+++ b/glove/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["CLQuantizer <ezioxxk@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.10"
+python = ">=3.9,<=3.11"
 gensim = "^4.2.0"
 redis = "^4.3.4"
 pytest = "^7.1.3"
