--- a/infra/pyproject.toml
+++ b/infra/pyproject.toml
@@ -10,6 +10,8 @@ python = ">=3.9, <3.11"
 fastapi = "^0.85.1"
 uvicorn = "^0.19.0"
 celery = "^5.2.7"
+redis = "^4.3.4"
+requests = "^2.28.1"
 
 
 [build-system]
