--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,28 @@
 [tool.poetry]
-name = "word2vec"
+name = "datapanel"
 version = "0.1.0"
 description = ""
-authors = ["Ez <ezioxxk@gmail.com>"]
+authors = ["CLQuantizer <ezioxxk@gmail.com>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.11"
-uvicorn = "^0.17.0"
-requests = "^2.27.1"
-pytest = "^7.1.0"
+python = ">=3.9, <=3.11"
+fastapi = "^0.85.1"
+uvicorn = "^0.18.3"
+redis = "^4.3.4"
+psutil = "^5.9.3"
+gensim = "^4.2.0"
+pytest = "^7.1.3"
+requests = "^2.28.1"
+python = ">=3.9, <3.11"
+celery = "^5.2.7"
 motor = "^3.0.0"
 python-multipart = "^0.0.5"
 SQLAlchemy = "^1.4.37"
 psycopg2-binary = "^2.9.3"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
-redis = "^4.3.4"
-
-[tool.poetry.dev-dependencies]
-fastapi = "^0.71.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.pytest.ini_options]
-pythonpath = [
-  "."
-]
